security(mcp): enforce asymmetric workload credentials