@@ -11,7 +11,14 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.attribute.PosixFilePermissions;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
 import java.security.MessageDigest;
+import java.security.Signature;
+import java.security.interfaces.RSAPrivateCrtKey;
+import java.security.interfaces.RSAPublicKey;
+import java.security.spec.MGF1ParameterSpec;
+import java.security.spec.PSSParameterSpec;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.Base64;
@@ -25,6 +32,7 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
+import tools.jackson.databind.JsonNode;
 import tools.jackson.databind.json.JsonMapper;
 
 class HttpMcpAuthorizationAdaptersTest {
@@ -34,23 +42,43 @@ class HttpMcpAuthorizationAdaptersTest {
     private static final String EDGE = "weave-mcp-server";
     private static final String CLIENT = "weaver-cell-test";
     private static final String SUBJECT = "service-account-cell-subject";
+    private static final String KEY_ID = "weave-mcp-server-current";
 
     @TempDir
     Path temporary;
 
     private HttpServer server;
     private JsonMapper mapper;
-    private Path secretFile;
+    private Path privateJwkFile;
+    private RSAPublicKey assertionPublicKey;
     private Instant now;
 
     @BeforeEach
     void setUp() throws Exception {
         server = HttpServer.create(new InetSocketAddress("127.0.0.1", 0), 0);
         mapper = JsonMapper.builder().build();
-        secretFile = temporary.resolve("mcp-edge.secret");
-        Files.writeString(secretFile, "edge+secret/=\n", StandardCharsets.UTF_8);
+        KeyPairGenerator generator = KeyPairGenerator.getInstance("RSA");
+        generator.initialize(2048);
+        KeyPair keyPair = generator.generateKeyPair();
+        RSAPrivateCrtKey privateKey = (RSAPrivateCrtKey) keyPair.getPrivate();
+        assertionPublicKey = (RSAPublicKey) keyPair.getPublic();
+        privateJwkFile = temporary.resolve("mcp-edge.private.jwk.json");
+        Files.write(privateJwkFile, mapper.writeValueAsBytes(Map.ofEntries(
+                Map.entry("kty", "RSA"),
+                Map.entry("kid", KEY_ID),
+                Map.entry("alg", "PS256"),
+                Map.entry("use", "sig"),
+                Map.entry("key_ops", List.of("sign")),
+                Map.entry("n", integer(privateKey.getModulus())),
+                Map.entry("e", integer(privateKey.getPublicExponent())),
+                Map.entry("d", integer(privateKey.getPrivateExponent())),
+                Map.entry("p", integer(privateKey.getPrimeP())),
+                Map.entry("q", integer(privateKey.getPrimeQ())),
+                Map.entry("dp", integer(privateKey.getPrimeExponentP())),
+                Map.entry("dq", integer(privateKey.getPrimeExponentQ())),
+                Map.entry("qi", integer(privateKey.getCrtCoefficient())))));
         try {
-            Files.setPosixFilePermissions(secretFile, PosixFilePermissions.fromString("rw-------"));
+            Files.setPosixFilePermissions(privateJwkFile, PosixFilePermissions.fromString("rw-------"));
         } catch (UnsupportedOperationException ignored) {
             // The production adapter retains regular-file, no-symlink, and readability checks.
         }
@@ -94,15 +122,17 @@ class HttpMcpAuthorizationAdaptersTest {
         ExchangedAccessToken result = new HttpMcpBackendTokenExchange(properties("/token", "/context"), mapper)
                 .exchange(workload, "incoming.cell.token", Set.of("calendar.read"));
 
-        assertThat(authorization.get()).isEqualTo("Basic " + Base64.getEncoder().encodeToString(
-                (EDGE + ":edge%2Bsecret%2F%3D").getBytes(StandardCharsets.UTF_8)));
-        assertThat(form.get()).containsExactlyInAnyOrderEntriesOf(Map.of(
+        assertThat(authorization.get()).isNull();
+        assertThat(form.get()).containsAllEntriesOf(Map.of(
                 "audience", API_RESOURCE,
                 "grant_type", "urn:ietf:params:oauth:grant-type:token-exchange",
+                "client_id", EDGE,
+                "client_assertion_type", PrivateKeyJwtClientAssertion.ASSERTION_TYPE,
                 "requested_token_type", "urn:ietf:params:oauth:token-type:access_token",
                 "scope", "calendar.read",
                 "subject_token", "incoming.cell.token",
                 "subject_token_type", "urn:ietf:params:oauth:token-type:access_token"));
+        verifyClientAssertion(form.get().get("client_assertion"));
         assertThat(form.get()).doesNotContainKeys("resource", "actor_token", "requested_subject", "client_secret");
         assertThat(result.value()).isEqualTo(outputToken);
         assertThat(result.subject()).isEqualTo(SUBJECT);
@@ -138,6 +168,33 @@ class HttpMcpAuthorizationAdaptersTest {
                 .isInstanceOfSatisfying(McpAdmissionException.class,
                         failure -> assertThat(failure.kind()).isEqualTo(McpAdmissionException.Kind.FORBIDDEN))
                 .hasMessageNotContaining(invalidToken);
+    }
+
+    @Test
+    void rejectsAPrivateKeyWhoseKidDoesNotMatchTheConfiguredSecretRef() throws Exception {
+        byte[] key = Files.readAllBytes(privateJwkFile);
+        JsonNode jwk = mapper.readTree(key);
+        Files.write(privateJwkFile, mapper.writeValueAsBytes(Map.ofEntries(
+                Map.entry("kty", jwk.path("kty").stringValue()),
+                Map.entry("kid", "retired-key"),
+                Map.entry("alg", jwk.path("alg").stringValue()),
+                Map.entry("use", jwk.path("use").stringValue()),
+                Map.entry("key_ops", List.of("sign")),
+                Map.entry("n", jwk.path("n").stringValue()),
+                Map.entry("e", jwk.path("e").stringValue()),
+                Map.entry("d", jwk.path("d").stringValue()),
+                Map.entry("p", jwk.path("p").stringValue()),
+                Map.entry("q", jwk.path("q").stringValue()),
+                Map.entry("dp", jwk.path("dp").stringValue()),
+                Map.entry("dq", jwk.path("dq").stringValue()),
+                Map.entry("qi", jwk.path("qi").stringValue()))));
+
+        assertThatThrownBy(() -> new HttpMcpBackendTokenExchange(properties("/token", "/context"), mapper)
+                .exchange(workload(), "incoming.cell.token", Set.of("calendar.read")))
+                .isInstanceOfSatisfying(McpAdmissionException.class,
+                        failure -> assertThat(failure.kind()).isEqualTo(McpAdmissionException.Kind.UNAVAILABLE))
+                .hasMessageNotContaining("retired-key")
+                .hasMessageNotContaining("incoming.cell.token");
     }
 
     @Test
@@ -212,10 +269,12 @@ class HttpMcpAuthorizationAdaptersTest {
                 URI.create(MCP_RESOURCE),
                 URI.create("https://api.weave.test/.well-known/oauth-protected-resource/mcp"),
                 URI.create(ISSUER),
-                List.of("mcp:tools", "calendar.read"),
+                List.of("mcp.tools", "calendar.read"),
                 URI.create(base + tokenPath),
                 EDGE,
-                secretFile.toAbsolutePath(),
+                privateJwkFile.toAbsolutePath(),
+                KEY_ID,
+                Duration.ofSeconds(30),
                 URI.create(API_RESOURCE),
                 URI.create(base + contextPath),
                 List.of("calendar.read"),
@@ -229,7 +288,7 @@ class HttpMcpAuthorizationAdaptersTest {
                 ISSUER,
                 SUBJECT,
                 CLIENT,
-                Set.of("mcp:tools", "calendar.read"),
+                Set.of("mcp.tools", "calendar.read"),
                 now,
                 now.plusSeconds(45),
                 "cell-jti");
@@ -268,5 +327,38 @@ class HttpMcpAuthorizationAdaptersTest {
     private static String fingerprint(String value) throws Exception {
         return "sha256:" + HexFormat.of().formatHex(
                 MessageDigest.getInstance("SHA-256").digest(value.getBytes(StandardCharsets.UTF_8)));
+    }
+
+    private void verifyClientAssertion(String assertion) throws Exception {
+        assertThat(assertion).isNotBlank();
+        String[] segments = assertion.split("\\.", -1);
+        assertThat(segments).hasSize(3);
+        JsonNode header = mapper.readTree(Base64.getUrlDecoder().decode(segments[0]));
+        JsonNode claims = mapper.readTree(Base64.getUrlDecoder().decode(segments[1]));
+        assertThat(header.path("alg").stringValue()).isEqualTo("PS256");
+        assertThat(header.path("kid").stringValue()).isEqualTo(KEY_ID);
+        assertThat(claims.path("iss").stringValue()).isEqualTo(EDGE);
+        assertThat(claims.path("sub").stringValue()).isEqualTo(EDGE);
+        assertThat(claims.path("aud").stringValue()).isEqualTo(
+                "http://127.0.0.1:" + server.getAddress().getPort() + "/token");
+        assertThat(claims.path("jti").stringValue()).isNotBlank();
+        assertThat(claims.path("exp").asLong() - claims.path("iat").asLong()).isEqualTo(30);
+        Signature verifier = Signature.getInstance("RSASSA-PSS");
+        verifier.setParameter(new PSSParameterSpec(
+                "SHA-256",
+                "MGF1",
+                MGF1ParameterSpec.SHA256,
+                32,
+                PSSParameterSpec.TRAILER_FIELD_BC));
+        verifier.initVerify(assertionPublicKey);
+        verifier.update((segments[0] + "." + segments[1]).getBytes(StandardCharsets.US_ASCII));
+        assertThat(verifier.verify(Base64.getUrlDecoder().decode(segments[2]))).isTrue();
+    }
+
+    private static String integer(java.math.BigInteger value) {
+        byte[] bytes = value.toByteArray();
+        int offset = bytes.length > 1 && bytes[0] == 0 ? 1 : 0;
+        return Base64.getUrlEncoder().withoutPadding()
+                .encodeToString(java.util.Arrays.copyOfRange(bytes, offset, bytes.length));
     }
 }
